--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="UTF-8">
+        <title>哈哈哈</title>
+        <link rel="icon" href="鬼.png">
+        </head>
     <body>
+        <audio autoplay>
+            <source src="龙卷风.mp3">
+        </audio>
         <h1 align="center"><font color="red">嘿，你在看啥，眼睛那么大，是猪吗？</font></h1>
         <img src="鬼.png" alt="图片无法显示！" width="100%" height="100%">
     </body>
