--- a/鬼/index.html
+++ b/鬼/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>哈哈哈</title>
+        <title>哈喽</title>
         <link rel="icon" href="鬼.png">
         </head>
         <style>
@@ -19,4 +19,5 @@
         
     </body>
 </html>  
+
 
