--- a/guimi/index.html
+++ b/guimi/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>哈哈哈</title>
+        <link rel="icon" href="鬼.png">
+        </head>
+        <style>
+            #id1{margin: 0 auto; width: 300px;}
+            </style>
+    <body>
+        <div id="id1">
+        <audio autoplay controls >
+            <source src="guimi/龙卷风.mp3">
+        </audio>
+        </div>
+        <h1 align="center"><font color="red">嘿，你在看啥，眼睛那么大，是猪吗？</font></h1>
+        <img src="鬼.png" alt="图片无法显示！" width="100%" height="100%">
+        
+    </body>
+</html>  
 
