--- a/guimi/index.html
+++ b/guimi/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="id1">
         <audio autoplay controls >
-            <source src="guimi/龙卷风.mp3">
+            <source src="龙卷风.mp3">
         </audio>
         </div>
         <h1 align="center"><font color="red">嘿，你在看啥，眼睛那么大，是猪吗？</font></h1>
