--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>哈哈哈</title>
+        <title>康氏集团官网</title>
         <link rel="icon" href="鬼.png">
         </head>
         <style>
@@ -10,14 +10,15 @@
             </style>
     <body>
         <div id="id1">
-        <audio autoplay controls >
+        <audio preload="auto" controls >
             <source src="龙卷风.mp3">
         </audio>
         </div>
         <h1 align="center"><font color="red">嘿，你在看啥，眼睛那么大，是猪吗？</font></h1>
         <img src="鬼.png" alt="图片无法显示！" width="100%" height="1700px">
-        
+        <h1 align="center">敬请期待开发人员后续工作</h1>
     </body>
 </html>  
+
 
 
