--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         </div>
         <h1 align="center"><font color="red">嘿，你在看啥，眼睛那么大，是猪吗？</font></h1>
         <img src="鬼.png" alt="图片无法显示！" width="100%" height="1700px">
-        <h1 align="center">敬请期待开发人员后续工作</h1>
+        <h1 align="center">后续精彩，敬请期待</h1>
     </body>
 </html>  
+
 
 
 
