--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </head>
         <style>
             #id1{margin: 0 auto; width: 300px;}
-            .ctrl{width: 300px;height: 50px;font-size: 20px;font-weight: bold;}
+            .ctrl{width: 300px;height: 50px;font-size: 20px;font-weight: bold;margin-bottom:10px;}
             </style>
     <body>
         <h1 align="center"><font color="red">欢迎进入康氏集团官方网页</font></h1>
@@ -33,3 +33,4 @@
         <h1 align="center">敬请期待开发人员后续工作</h1>
     </body>
 </html>  
+
