--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             .ctrl{width: 300px;height: 50px;font-size: 20px;font-weight: bold;margin-bottom:10px;}
             </style>
     <body>
-        <h1 align="center"><font color="red">欢迎进入康氏集团官方网页</font></h1>
+        <h1 align="center"><font color="red">欢迎进入康氏集团官方首页</font></h1>
         <div id="id1">
         <audio id="myAudio" src="龙卷风.mp3" autoplay></audio>
         <button onclick="playAudio()" class="ctrl">点击播放音乐</button>
@@ -33,4 +33,5 @@
         <h1 align="center">敬请期待开发人员后续工作</h1>
     </body>
 </html>  
+
 
