--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
         
         <img src="鬼.png" alt="图片无法显示！" width="100%" height="1700px">
-        <h1 align="center">敬请期待开发人员后续工作</h1>
+        <h1 align="center">后续精彩，敬请期待</h1>
     </body>
 </html>  
+
 
 
