--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
                     <p>负责公司产品的前端开发工作</p>
                 </div>
                 <div class="job-card">
-                    <h3>财务分析师</h3>
+                    <h3>数据库分析</h3>
                     <p><strong>工作地点：</strong>洞口</p>
                     <p><strong>经验要求：</strong>2-4年</p>
                     <p>负责公司数据库分析</p>
                 </div>
                 <div class="job-card">
-                    <h3>市场营销经理</h3>
+                    <h3>后端开发</h3>
                     <p><strong>工作地点：</strong>洞口职业中专</p>
                     <p><strong>经验要求：</strong>5年以上</p>
                     <p>制定后端开发，维护与管理</p>
@@ -312,8 +312,8 @@
                         <select id="position" required>
                             <option value="">请选择职位</option>
                             <option value="frontend">高级前端工程师</option>
-                            <option value="finance">财务分析师</option>
-                            <option value="marketing">市场营销经理</option>
+                            <option value="finance">数据库分析</option>
+                            <option value="marketing">后端开发</option>
                             <option value="hr">人力资源专员</option>
                         </select>
                     </div>
@@ -359,4 +359,5 @@
         });
     </script>
 </body>
+
 </html>
