--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>康氏集团---招聘网</title>
+        <title>康氏集团</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link rel="icon" href="康氏集团logo.png">
         <style>
             @import url(boss.css);
         </style>
@@ -215,4 +216,5 @@
 
 
     </body>
+
 </html>
