--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             // GitHub仓库信息（需要替换为你自己的信息）
             const owner = 'ksjtcom';
             const repo = 'ksjtcom.github.io';
-            const path = 'visits.txt'; // 存储访问记录的文件路径
+            const path = 'ksjtcom.github.io/visits.txt'; // 存储访问记录的文件路径
             const token = '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'; // 注意：在实际生产环境中，前端直接暴露令牌非常不安全！
     
             // 由于前端直接使用PAT存在严重安全风险，以下代码仅作概念演示
@@ -304,3 +304,4 @@
     </body>
 
 </html>
+
