--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
         <footer>
             <div class="container">
             <p>© 2025 康氏集团 版权所有</p>
+            <p>邹心源是个大傻逼</p>
             </div>
 
         </footer>
@@ -221,5 +222,6 @@
         </script>
     </body>
 </html>
+
 
 
